add survey link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
         Freedom Colony Portal
       </h1>
       <h2>Please fill out the neighborhood survey</h2>
-      <div class="ui huge primary button">Start Survey<i class="right arrow icon"></i></div>
+      <a href='https://docs.google.com/forms/d/e/1FAIpQLSe_9XTqGt_DT0qvURnaTcbkPawWW7ZazldC9I_vXLmo3K6zEQ/viewform'>
+        <div class="ui huge primary button">Start Survey<i class="right arrow icon"></i></div>
+      </a>
     </div>
 
   </div>
