--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p>Many of your neighbors are already sharing and answering questions.</p>
         </div>
         <div class="six wide right floated column">
-          <img src="assets/images/FreedomColony-Map.png" class="ui large bordered rounded image">
+          <img src="images/freedom-map.png" class="ui large bordered rounded image">
         </div>
       </div>
       <div class="row">
