--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="ui large top fixed hidden menu">
   <div class="ui container">
     <a class="active item">Freedom Colony</a>
-    <a class="item">Directory</a>
+    <!-- <a class="item">Directory</a>
     <a class="item">Civic Association</a>
     <a class="item">Members</a>
-    <!-- <div class="right menu">
+    <div class="right menu">
       <div class="item">
         <a class="ui button">Log in</a>
       </div>
@@ -53,10 +53,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- Sidebar Menu -->
 <div class="ui vertical inverted sidebar menu">
   <a class="active item">Freedom Colony</a>
-  <a class="item">Directory</a>
+  <!-- <a class="item">Directory</a>
   <a class="item">Civic Association</a>
   <a class="item">Members</a>
-   <!-- <a class="item">Login</a>
+  <a class="item">Login</a>
   <a class="item">Signup</a> -->
 </div>
 
@@ -134,14 +134,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="#">Civic Association</a>
       </h4>
       <h3 class="ui header">Join the Freedom Colony Civic Associan today!</h3>
-      <p>Join our 80 members in the .</p>
-      <a class="ui large button">Read Bylaws</a>
+      <p>Join our 80 members in supporting our community and bringing people together. If you are interested or new to the community, please email freedomcolonywesterville@gmail.com. Our President is Sarah Cardoza located on Valley Forge Court.</p>
       <h4 class="ui horizontal header divider">
         <a href="#">Local Quicklinks</a>
       </h4>
-      <h3 class="ui header">Did We Tell You About Our Bananas?</h3>
-      <p>Yes I know you probably disregarded the earlier boasts as non-sequitur filler content, but its really true. It took years of gene splicing and combinatory DNA research, but our bananas can really dance.</p>
-      <a class="ui large button">I'm Still Quite Interested</a>
+      <h3 class="ui header">Get all the local information you need.</h3>
+      <!-- <a class="ui large button">I'm Still Quite Interested</a> -->
     </div>
   </div>
 
