--- a/index.html
+++ b/index.html
@@ -140,7 +140,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="#">Local Quicklinks</a>
       </h4>
       <h3 class="ui header">Did We Tell You About Our Bananas?</h3>
-      <p>Yes I know you probably disregarded the earlier boasts as non-sequitur filler content, but its really true. It took years of gene splicing and combinatory DNA research, but our bananas can really dance.</p>
+        <ul>
+          <li><a href="http://www.westerville.org/">City of Westerville</a></li>
+          <li><a href="http://www.westerville.k12.oh.us/">Westerville City Schools</a></li>
+          <li><a href="http://www.westervillelibrary.org/">Library</a></li>
+          <li><a href="http://www.westerville.org/services/parks-recreation/parks-and-facilities/community-center">Community Center</a></li>
+          <li><a href="http://www.uptownwestervilleinc.com/">Uptown Westerville</a></li>          
+          <li><a href="https://www.linkedin.com/company-beta/67732/?pathWildcard=67732">LinkedIn</a></li>
+          <li><a href="https://twitter.com/tellwesterville">Twitter</a></li>
+          <li><a href="https://www.facebook.com/cityofwesterville">Facebook</a></li>
+        </ul>
       <a class="ui large button">I'm Still Quite Interested</a>
     </div>
   </div>
