Removed Footer and Added Quicklinks

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <i class="sidebar icon"></i>
         </a>
         <a class="active item">Freedom Colony</a>
-        <a class="item">Directory</a>
+        <!--<a class="item">Directory</a>
         <a class="item">Civic Association</a>
         <a class="item">Members</a>
  <!-- <div class="right item">
@@ -139,6 +139,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="#">Local Quicklinks</a>
       </h4>
       <h3 class="ui header">Get all the local information you need.</h3>
+      <ul>
+          <li><a href="http://www.westerville.org/">City of Westerville</a></li>
+          <li><a href="http://www.westerville.k12.oh.us/">Westerville City Schools</a></li>
+          <li><a href="http://www.westervillelibrary.org/">Library</a></li>
+          <li><a href="http://www.westerville.org/services/parks-recreation/parks-and-facilities/community-center">Community Center</a></li>
+          <li><a href="http://www.uptownwestervilleinc.com/">Uptown Westerville</a></li>          
+          <li><a href="https://www.linkedin.com/company-beta/67732/?pathWildcard=67732">LinkedIn</a></li>
+          <li><a href="https://twitter.com/tellwesterville">Twitter</a></li>
+          <li><a href="https://www.facebook.com/cityofwesterville">Facebook</a></li>
+        </ul>
       <!-- <a class="ui large button">I'm Still Quite Interested</a> -->
     </div>
   </div>
@@ -148,7 +158,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="ui container">
       <div class="ui stackable inverted divided equal height stackable grid">
         <div class="three wide column">
-          <h4 class="ui inverted header">About</h4>
+          <!--<h4 class="ui inverted header">About</h4>
           <div class="ui inverted link list">
             <a href="#" class="item">Sitemap</a>
             <a href="#" class="item">Contact Us</a>
@@ -167,7 +177,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="seven wide column">
           <h4 class="ui inverted header">Footer Header</h4>
-          <p>Extra space for a call to action inside the footer that could help re-engage users.</p>
+          <p>Extra space for a call to action inside the footer that could help re-engage users.</p> -->
         </div>
       </div>
     </div>
