--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
 <!-- Following Menu -->
-<div class="ui large top fixed hidden menu">
+<!-- <div class="ui large top fixed hidden menu">
   <div class="ui container">
     <a class="active item">Freedom Colony</a>
-    <!-- <a class="item">Directory</a>
+    <a class="item">Directory</a>
     <a class="item">Civic Association</a>
     <a class="item">Members</a>
     <div class="right menu">
@@ -45,24 +45,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
       <div class="item">
         <a class="ui primary button">Sign Up</a>
-      </div> -->
+      </div>
     </div>
   </div>
 </div>
-
+ -->
+  
 <!-- Sidebar Menu -->
-<div class="ui vertical inverted sidebar menu">
+<!-- <div class="ui vertical inverted sidebar menu">
   <a class="active item">Freedom Colony</a>
   <!-- <a class="item">Directory</a>
   <a class="item">Civic Association</a>
   <a class="item">Members</a>
   <a class="item">Login</a>
-  <a class="item">Signup</a> -->
+  <a class="item">Signup</a>
 </div>
+-->
 
 
 <!-- Page Contents -->
-<div class="pusher">
+<!-- <div class="pusher">
   <div class="ui inverted vertical masthead center aligned segment">
 
     <div class="ui container">
@@ -77,10 +79,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
  <!-- <div class="right item">
           <a class="ui inverted button">Log in</a>
           <a class="ui inverted button">Sign Up</a>
-        </div> -->
+        </div>
       </div>
     </div>
-
+ -->
+  
     <div class="ui text container">
       <h1 class="ui inverted header">
         Welcome to Freedom Colony!
