Added What is Freedom Colony section

--- a/index.html
+++ b/index.html
@@ -97,9 +97,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="ui vertical stripe segment">
     <div class="ui middle aligned stackable grid container">
       <div class="row">
+      <h4 class="ui horizontal header divider">
+          <a href="#">What is Freedom Colony</a>
+      </h4>
+        <div class="eight wide column">
+          <h3 class="ui header">Neighbors since 1976</h3>
+          <p>One of the first neighborhoods to be established in Westerville, east of State Street, Freedom Colony extends from Spring Road to Liberty Lane to the north side of Shrock See the map for details.</p>
+        </div>
         <div class="eight wide column">
           <h3 class="ui header">Join our community on NextDoor</h3>
-          <p>Many of your neighbors are already sharing and answering questions.</p>
+          <p>Many of your neighbors are already sharing and answering questions. Stay updated on local recommendations, events and news.</p>
         </div>
         <div class="six wide right floated column">
           <img src="images/freedom-map.png" class="ui large bordered rounded image">
