--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 <!-- Page Contents -->
-<!-- <div class="pusher">
+<div class="pusher">
   <div class="ui inverted vertical masthead center aligned segment">
 
     <div class="ui container">
-      <div class="ui large secondary inverted pointing menu">
+      <!-- <div class="ui large secondary inverted pointing menu">
         <a class="toc item">
           <i class="sidebar icon"></i>
         </a>
@@ -79,10 +79,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
  <!-- <div class="right item">
           <a class="ui inverted button">Log in</a>
           <a class="ui inverted button">Sign Up</a>
-        </div>
+        </div> -->
       </div>
     </div>
- -->
+ 
   
     <div class="ui text container">
       <h1 class="ui inverted header">
@@ -103,8 +103,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="eight wide column">
           <h3 class="ui header">Neighbors since 1976</h3>
           <p>One of the first neighborhoods to be established in Westerville, east of State Street, Freedom Colony extends from Spring Road to Liberty Lane to the north side of Shrock See the map for details.</p>
-        </div>
-        <div class="eight wide column">
           <h3 class="ui header">Join our community on NextDoor</h3>
           <p>Many of your neighbors are already sharing and answering questions. Stay updated on local recommendations, events and news.</p>
         </div>
