Updated quicklinks to 2 column

--- a/index.html
+++ b/index.html
@@ -119,21 +119,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="#">Civic Association</a>
       </h4>
       <h3 class="ui header">Join the Freedom Colony Civic Associan today!</h3>
-      <p>Join our 80 members in supporting our community and bringing people together. If you are interested or new to the community, please email freedomcolonywesterville@gmail.com. Our President is Sarah Cardoza located on Valley Forge Court.</p>
-      <h4 class="ui horizontal header divider">
-        <a href="#">Local Quicklinks</a>
-      </h4>
-      <h3 class="ui header">Get all the local information you need.</h3>
-      <ul>
-          <li><a href="http://www.westerville.org/">City of Westerville</a></li>
-          <li><a href="http://www.westerville.k12.oh.us/">Westerville City Schools</a></li>
-          <li><a href="http://www.westervillelibrary.org/">Library</a></li>
-          <li><a href="http://www.westerville.org/services/parks-recreation/parks-and-facilities/community-center">Community Center</a></li>
-          <li><a href="http://www.uptownwestervilleinc.com/">Uptown Westerville</a></li>          
-          <li><a href="https://www.linkedin.com/company-beta/67732/?pathWildcard=67732">LinkedIn</a></li>
-          <li><a href="https://twitter.com/tellwesterville">Twitter</a></li>
-          <li><a href="https://www.facebook.com/cityofwesterville">Facebook</a></li>
-        </ul>
+           <p>Join our 80 members in supporting our community and bringing people together. If you are interested or new to the community, please email freedomcolonywesterville@gmail.com. Our President is Sarah Cardoza located on Valley Forge Court.</p>
+      <div class="six wide right floated column">
+            <h4 class="ui horizontal header divider">
+             <a href="#">Local Quicklinks</a>
+            </h4>
+            <h3 class="ui header">Get all the local information you need.</h3>
+            <ul>
+                <li><a href="http://www.westerville.org/">City of Westerville</a></li>
+                <li><a href="http://www.westerville.k12.oh.us/">Westerville City Schools</a></li>
+                <li><a href="http://www.westervillelibrary.org/">Library</a></li>
+                <li><a href="http://www.westerville.org/services/parks-recreation/parks-and-facilities/community-center">Community Center</a></li>
+                <li><a href="http://www.uptownwestervilleinc.com/">Uptown Westerville</a></li>          
+                <li><a href="https://www.linkedin.com/company-beta/67732/?pathWildcard=67732">LinkedIn</a></li>
+                <li><a href="https://twitter.com/tellwesterville">Twitter</a></li>
+                <li><a href="https://www.facebook.com/cityofwesterville">Facebook</a></li>
+             </ul>
+      </div>
     </div>
   </div>
 
@@ -154,14 +156,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
     </div>
   </div>-->
-
-  <div class="ui vertical stripe segment">
-    <div class="ui text container">
-       
-    </div>
-  </div>
-
-
   <div class="ui inverted vertical footer segment">
     <div class="ui container">
       <div class="ui stackable inverted divided equal height stackable grid">
