--- a/index.html
+++ b/index.html
@@ -118,8 +118,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <h4 class="ui horizontal header divider">
         <a href="#">Civic Association</a>
       </h4>
-      <h3 class="ui header">Join the Freedom Colony Civic Associan today!</h3>
+      <div class="six wide left floated column"> 
+        <h3 class="ui header">Join the Freedom Colony Civic Associan today!</h3>
            <p>Join our 80 members in supporting our community and bringing people together. If you are interested or new to the community, please email freedomcolonywesterville@gmail.com. Our President is Sarah Cardoza located on Valley Forge Court.</p>
+      </div>
       <div class="six wide right floated column">
             <h4 class="ui horizontal header divider">
              <a href="#">Local Quicklinks</a>
