Add MailTo Link

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
              <a href="#">Civic Association</a>
          </h4>
          <h3 class="ui header">Join the Freedom Colony Civic Associan today!</h3>
-           <p>Join our 80 members in supporting our community and bringing people together. If you are interested or new to the community, please email freedomcolonywesterville@gmail.com. Our President is Sarah Cardoza located on Valley Forge Court.</p>
+           <p>Join our 80 members in supporting our community and bringing people together. If you are interested or new to the community, please email <a href="mailto:freedomcolonywesterville@gmail.com">freedomcolonywesterville@gmail.com</a>. Our President is Sarah Cardoza located on Valley Forge Court.</p>
       </div>
       <div class="six wide right floated column">
             <h4 class="ui horizontal header divider">
