--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </h4>
         <div class="eight wide column">
           <h3 class="ui header">Neighbors since 1976</h3>
-          <p>One of the first neighborhoods to be established in Westerville, east of State Street, Freedom Colony extends from Spring Road to Liberty Lane to the north side of Shrock See the map for details.</p>
+          <p>One of the first neighborhoods to be established in Westerville, east of State Street, Freedom Colony extends from Spring Road to Liberty Lane to the north side of Shrock. <i>See the map for details.</i></p>
           <h3 class="ui header">Join our community on NextDoor</h3>
           <p>Many of your neighbors are already sharing and answering questions. Stay updated on local recommendations, events and news.</p>
         </div>
@@ -120,7 +120,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
              <a href="#">Civic Association</a>
          </h4>
          <h3 class="ui header">Join the Freedom Colony Civic Associan today!</h3>
-           <p>Join our 80 members in supporting our community and bringing people together. If you are interested or new to the community, please email <a href="mailto:freedomcolonywesterville@gmail.com">freedomcolonywesterville@gmail.com</a>. Our President is Sarah Cardoza located on Valley Forge Court.</p>
+           <p>Join our 80 members in supporting our community and bringing people together. If you are interested or new to the community, please email <a href="mailto:freedomcolonywesterville@gmail.com">freedomcolonywesterville@gmail.com</a>.</p>
       </div>
       <div class="six wide right floated column">
             <h4 class="ui horizontal header divider">
@@ -180,10 +180,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <a href="#" class="item">How To Access</a>
             <a href="#" class="item">Favorite X-Men</a>
           </div>
-        </div>
+        </div> -->
         <div class="seven wide column">
           <h4 class="ui inverted header">Footer Header</h4>
-          <p>Extra space for a call to action inside the footer that could help re-engage users.</p> -->
+          <p>This website is paid for and managed by Freedom Colony Civic Association (FCCA).</p>
         </div>
       </div>
     </div>
