--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
         </div> -->
         <div class="seven wide column">
-          <h4 class="ui inverted header">Footer Header</h4>
+          <h4 class="ui inverted header">Thanks for Visiting.</h4>
           <p>This website is paid for and managed by Freedom Colony Civic Association (FCCA).</p>
         </div>
       </div>
